--- a/.github/workflows/pipelines-prod.yaml
+++ b/.github/workflows/pipelines-prod.yaml
@@ -10,8 +10,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
