--- a/.github/workflows/pipelines-prod.yaml
+++ b/.github/workflows/pipelines-prod.yaml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Set permissions for private key
         run: |
-          echo "test" > key.pem
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
 
       - name: Pull Docker image
