Modify command to use apt-get

--- a/.github/workflows/pipelines-prod.yaml
+++ b/.github/workflows/pipelines-prod.yaml
@@ -61,7 +61,7 @@ jobs:
 
       - name: Pull Docker image
         run: |
-          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'sudo apt update'
+          ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'sudo apt-get update'
           ssh -o StrictHostKeyChecking=no -i key.pem ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} 'sudo docker pull ${{ secrets.DOCKER_USERNAME }}/recipe:latest'
 
       - name: Stop running container
