--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+spring.datasource.url=jdbc:mysql://recipe-database.cycwkr5mkgoi.ca-central-1.rds.amazonaws.com:3306/recipedb
+spring.datasource.username=masterUsername
+spring.datasource.password=398292002
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+server.error.include-message=always
